--- a/index.html
+++ b/index.html
@@ -2,48 +2,98 @@
 <html lang="en">
 
 <head>
-    <!-- Bootstrap styles -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <!-- Bootstrap styles -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-        <!-- styles -->
+  <!-- Google fonts CDN -->
+  <link href="https://fonts.googleapis.com/css2?family=Karla&family=Syne:wght@500&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="css/styles.css">
 
-    <!-- Jquery cdn -->
+  <!-- styles -->
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/styles.css">
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seyi - Health expert for youth and Adults</title>
+  <!-- Jquery cdn -->
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Seyi - Health expert for youth and Adults</title>
 </head>
 
 <body>
-    <!-- nav menu -->
-    <ul class="nav justify-content-center nav-menu">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-    <h1>HeyLLO World</h1>
+  <!-- nav menu -->
+  <nav class="navbar navbar-expand-lg  navbar ">
+
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="/images/seyi.png" width="75" height="80" class="d-inline-block align-top" alt=""
+          loading="lazy"><sup>PHD</sup>
+      </a>
+      <button class="navbar-toggler bg-primary" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon" style="background-color: #ffffff2d"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link nav-link" href="#">About<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+  </nav>
+
+  <!--  Title Section-->
+  <section id="title">
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class=" col-lg-6">
+
+          <p class="p-title title-title ">OluwaSeyi Somefun Oladapo</p>
+          <h1 class="title-title ">Youth sexual and reproductive health expert</h1>
+
+          <button class="btn btn-primary btn-lg"> View my work</button>
+          <button class="btn btn-secondary btn-lg">Get in Touch</button>
+        </div>
+     
+
+
+          <div class="col-lg-6">
+
+      <img class="seyi-image" src="images/seyi-img.png">
+    </div>
+
+
+    </div>
+  </div>
+
+  </section>
+
+
+<hr color="whiite">
+
+
+
+
 </body>
 
 </html>
