--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,11 @@
 
   <link rel="stylesheet" href="css/styles.css">
 
+  <!-- font Awesome cdn -->
+
+  <script src="https://kit.fontawesome.com/fd3aee233d.js" crossorigin="anonymous"></script>
+
+
   <!-- Jquery cdn -->
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -28,7 +33,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Seyi - Sexual health expert</title>
+  <title>Seyi - Sexual Health Expert</title>
 </head>
 
 <body>
@@ -36,7 +41,7 @@
   <nav class="navbar navbar-expand-lg  navbar ">
 
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/index.html">
         <img src="/images/seyi.png" width="75" height="80" class="d-inline-block align-top" alt=""
           loading="lazy"><sup>PHD</sup>
       </a>
@@ -61,37 +66,21 @@
     </div>
   </nav>
 
-  <!--  Title Section-->
-  <section id="title">
 
-    <div class="container-fluid">
-      <div class="row">
-        <div class=" col-lg-6">
+<section id="contact">
 
-          <p class="p-title title-title "> Dr. OluwaSeyi Somefun Oladapo</p>
-          <h1 class="title-title ">Youth sexual and reproductive health expert</h1>
-
-          <div class="button-style">
-            <a href="/projects.html"> <button class="btn btn-primary btn-lg"> View my work</button>
-             </a>
-
-             <a href="contact.html"> <button class="btn btn-secondary btn-lg">Get in Touch</button>
-             </a>
-        </div>
-        </div>
-     
+  <h4 class="contact-text">Let's Connect 👋 </h4> 
 
 
-          <div class="col-lg-6">
-
-      <img class="seyi-image" src="images/seyi-img.png">
-    </div>
+  <i class="fas fa-envelope-square icon fa-5x" ></i>
 
 
-    </div>
-  </div>
+  <i class="fab fa-linkedin icon fa-5x"></i>
 
-  </section>
-<span style="color: aliceblue; width: 200px;">
 
+  <i class="fab fa-whatsapp icon fa-5x"></i>
+
+</section>
+ 
+</body>
 </html>
