--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Seyi - Sexual health expert</title>
+  <title>Seyi - Sexual Health Expert</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
   <nav class="navbar navbar-expand-lg  navbar ">
 
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/index.html">
         <img src="/images/seyi.png" width="75" height="80" class="d-inline-block align-top" alt=""
           loading="lazy"><sup>PHD</sup>
       </a>
@@ -61,37 +61,56 @@
     </div>
   </nav>
 
-  <!--  Title Section-->
-  <section id="title">
 
-    <div class="container-fluid">
-      <div class="row">
-        <div class=" col-lg-6">
+<section id="projects">
 
-          <p class="p-title title-title "> Dr. OluwaSeyi Somefun Oladapo</p>
-          <h1 class="title-title ">Youth sexual and reproductive health expert</h1>
+  <div class="container">
+    <div class="row">
 
-          <div class="button-style">
-            <a href="/projects.html"> <button class="btn btn-primary btn-lg"> View my work</button>
-             </a>
-
-             <a href="contact.html"> <button class="btn btn-secondary btn-lg">Get in Touch</button>
-             </a>
-        </div>
-        </div>
-     
-
-
-          <div class="col-lg-6">
-
-      <img class="seyi-image" src="images/seyi-img.png">
-    </div>
-
-
+      <div class="col-lg-4">
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
+</div>
 
-  </section>
-<span style="color: aliceblue; width: 200px;">
+  <div class="col-lg-4">
+  <div class="card" style="width: 18rem; ">
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+</div>
 
+<div class="col-lg-4">
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+</div>
+
+<div class="col-lg-4 ">
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+</div>
+
+</div>
+</div>
+
+</section>
+ 
+</body>
 </html>
